--- a/UPOSS/Controls/Dialog/CashierPrintReceiptDialog.xaml
+++ b/UPOSS/Controls/Dialog/CashierPrintReceiptDialog.xaml
@@ -16,7 +16,10 @@
         <StackPanel Orientation="Vertical" Margin="5">
             <!--Title-->
             <TextBlock Text="Kedai Seri Boltibay Sdn. Bhd." FontWeight="Bold" HorizontalAlignment="Center" FontSize="14"/>
-            
+
+            <!--Company No-->
+            <TextBlock Text="(Co. No: 755824-D)" HorizontalAlignment="Center" FontSize="10"/>
+
             <!--Address-->
             <TextBlock Text="{Binding Source={x:Static properties:Settings.Default}, Path=Setting_SystemAddress}" 
                        TextWrapping="Wrap" Margin="10 0" HorizontalAlignment="Center" TextAlignment="Center"/>
