--- a/UPOSS/Controls/Dialog/AnalyticsPrintReportDialog.xaml
+++ b/UPOSS/Controls/Dialog/AnalyticsPrintReportDialog.xaml
@@ -54,13 +54,13 @@
 
             <!--Generated Date-->
             <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                <TextBlock Text="Date : "/>
+                <TextBlock Text="Generated Date : "/>
                 <TextBlock x:Name="tbkGeneratedDate" TextWrapping="Wrap"/>
             </WrapPanel>
 
             <!--Date Of Report-->
             <WrapPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                <TextBlock Text="To : "/>
+                <TextBlock Text="Date of Report : "/>
                 <TextBlock x:Name="tbkDateOfReport" TextWrapping="Wrap"/>
             </WrapPanel>
             
@@ -205,7 +205,7 @@
             </StackPanel>
 
             <!--Gross Sales-->
-            <Grid Margin="0 10 0 0">
+            <!--<Grid Margin="0 10 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="105"/>
                     <ColumnDefinition Width="55"/>
@@ -213,10 +213,10 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Gross Sales" Grid.Column="0" HorizontalAlignment="Left" Margin="1 0"/>
                 <TextBlock x:Name="tbkGrossSalesAmount" Grid.Column="3" HorizontalAlignment="Right" Margin="1 0"/>
-            </Grid>
+            </Grid>-->
 
             <!--Discount-->
-            <StackPanel Orientation="Vertical">
+            <!--<StackPanel Orientation="Vertical">
                 <TextBlock Text="Less(-) Discount" Margin="1 15 1 0"/>
 
                 <Grid>
@@ -240,7 +240,7 @@
                     <TextBlock Text="Total (%) Discount" Grid.Column="0" HorizontalAlignment="Left" Margin="1 0"/>
                     <TextBlock x:Name="tbkTotalDiscountAmount" Grid.Column="3" HorizontalAlignment="Right" Margin="1 0"/>
                 </Grid>
-            </StackPanel>
+            </StackPanel>-->
 
             <!--Total Revenue-->
             <StackPanel Orientation="Vertical">
