--- a/UPOSS/Controls/Dialog/AnalyticsPrintReportDialog.xaml
+++ b/UPOSS/Controls/Dialog/AnalyticsPrintReportDialog.xaml
@@ -205,7 +205,7 @@
             </StackPanel>
 
             <!--Gross Sales-->
-            <!--<Grid Margin="0 10 0 0">
+            <Grid Margin="0 10 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="105"/>
                     <ColumnDefinition Width="55"/>
@@ -213,10 +213,10 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="Gross Sales" Grid.Column="0" HorizontalAlignment="Left" Margin="1 0"/>
                 <TextBlock x:Name="tbkGrossSalesAmount" Grid.Column="3" HorizontalAlignment="Right" Margin="1 0"/>
-            </Grid>-->
+            </Grid>
 
             <!--Discount-->
-            <!--<StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Vertical">
                 <TextBlock Text="Less(-) Discount" Margin="1 15 1 0"/>
 
                 <Grid>
@@ -240,7 +240,7 @@
                     <TextBlock Text="Total (%) Discount" Grid.Column="0" HorizontalAlignment="Left" Margin="1 0"/>
                     <TextBlock x:Name="tbkTotalDiscountAmount" Grid.Column="3" HorizontalAlignment="Right" Margin="1 0"/>
                 </Grid>
-            </StackPanel>-->
+            </StackPanel>
 
             <!--Total Revenue-->
             <StackPanel Orientation="Vertical">
